erDiagram
    PATIENTS ||--o{ PATIENT_TREATMENTS : has
    PATIENTS ||--o{ PATIENT_TURNS_MONTHLY : has
    PATIENTS ||--o{ PATIENT_TURNS_OVERRIDES : has
    PATIENTS ||--o{ PATIENT_TURNS : has
    PATIENTS ||--o{ ATTENDANCES : attends
    PATIENTS ||--o{ PATIENT_REQUESTS : requests

    PATIENT_TURNS }o--|| TREATMENTS : applies_to

    PATIENT_TREATMENTS }o--|| TREATMENTS  : includes
    PATIENT_TURNS_MONTHLY }o--|| TREATMENTS : applies_to
    PATIENT_TURNS_OVERRIDES }o--|| TREATMENTS : applies_to
    ATTENDANCES }o--|| TREATMENTS : belongs_to
    TREATMENTS ||--o{ PATIENT_REQUEST_TREATMENTS : includes
    TREATMENTS ||--o{ PATIENT_REQUEST_TREATMENTS : includes
    
    PATIENT_REQUESTS ||--o{ PATIENT_REQUEST_TREATMENTS : includes

    OS ||--o{ PATIENTS : covers
    SEDE ||--o{ PATIENTS_SEDE : serves
    PATIENTS ||--o{ PATIENTS_SEDE : serves
    PATIENT_STATE ||--o{ PATIENTS : has
    TREATMENT_PLANS ||--o| PATIENT_RECORDS  : belongs_to

    PATIENTS ||--o| TREATMENT_PLANS : has
    TREATMENT_PLANS ||--|| TREATMENT_PLAN_ITEMS : includes
    TREATMENT_PLAN_ITEMS ||--|| TREATMENTS : refers_to

    USERS ||--o{ SESSIONS : owns
    USERS ||--o{ USER_ACTIVITY_LOGS : logs


    PATIENT_RECORDS {
        bigint id PK
        string patient_id FK
        file consentimiento_padres
        file carnet_afiliatorio
        bigint treatment_plan_id FK
        file pedidos_medicos
        file resumen_historial_clinico
        bigint presupuesto
        boolean devolucion_padres
    }
    TREATMENT_PLANS {
        bigint id PK
        string patient_id FK
        date start_date
        date end_date
        string note
        timestamptz created_at
    }
    TREATMENT_PLAN_ITEMS{
        bigint treatment_id FK
        bigint treatment_plan_id FK
    }
    PATIENT_STATE {
        bigint id PK
        string name
    }







    SESSIONS {
        string token PK
        bigint user_id FK
        timestamptz expires_at
        timestamptz created_at
    }
    USER_ACTIVITY_LOGS {
        bigint id PK
        bigint actor_user_id FK
        string actor_username
        string action_type
        string entity_type
        string entity_id
        string entity_label
        timestamptz created_at
    }

    SEDE {
        bigint id PK
        string name
    }
    PATIENTS_SEDE {
        bigint patient_id FK
        bigint sede_id FK
    }
    PATIENTS {
        TEXT id PK
        TEXT full_name
        TEXT first_name
        TEXT last_name
        TEXT age
        DATE birth_date
        TEXT condition
        DATE last_visit
        DATE last_fisiatrico
        DATE last_fisiatrico_alta
        DATE last_fisiatrico_vencimiento
        DATE last_trabajo_social
        DATE last_trabajo_social_alta
        DATE last_trabajo_social_vencimiento
        TEXT dni
        TEXT cuit
        TEXT cud
        bigint os_id FK
        bigint sede_id FK
        TEXT affiliate_number
        TEXT integracion_horario
        TEXT diagnosis
        TEXT father_tutor_name
        TEXT father_tutor_phone
        TEXT mother_tutor_name
        TEXT mother_tutor_phone
        TEXT address_street
        TEXT address_number
        TEXT address_neighborhood
        TEXT address_floor
        TEXT address_sector
        TEXT school_name
        TEXT school_grade
        TEXT school_shift
        TEXT car_years
        TEXT ppi_years
        TEXT acta_acuerdo_years
        TEXT notes
        DATE authorized_at
        DATE authorization_expires_at
        BOOLEAN is_active
        BOOLEAN is_discharged
        bigint patient_state_id FK
        TIMESTAMPTZ discharged_at
        INTEGER parametro
        TEXT module_type
        TIMESTAMPTZ created_at
    }
    OS {
        bigint id PK
        string name
    }
    TREATMENTS {
        bigint id PK
        string name
    }
    PATIENT_TREATMENTS {
        string patient_id FK
        bigint treatment_id FK
    }
    PATIENT_TURNS {
        string patient_id FK
        bigint treatment_id FK
        string day_of_week
        string time
    }
    PATIENT_TURNS_MONTHLY {
        string patient_id FK
        bigint treatment_id FK
        int month
        string day_of_week
        string time
    }
    PATIENT_TURNS_OVERRIDES {
        string patient_id FK
        bigint treatment_id FK
        string date
        string time
        boolean active
    }
    ATTENDANCES {
        bigint id PK
        string patient_id FK
        date date
        bigint treatment_id FK
        string note
        timestamptz created_at
    }
    PATIENT_REQUESTS {
        bigint id PK
        string patient_id FK
        date start_date
        date end_date
        boolean apply_treatments
        timestamptz applied_at
    }
    PATIENT_REQUEST_TREATMENTS {
        bigint request_id FK
        bigint treatment_id FK
    }
    USERS {
        bigint id PK
        string username
        string password_hash
        boolean is_admin
        timestamptz created_at
    }